# VTrack

./: app.py  main.py  pyproject.toml
templates/: base.html  delete.html  index.html  search.html  update.html
