[project]
name = "vtrack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn==0.30.6",
    "pandas==2.2.3",
    "openpyxl==3.1.5",
    "fpdf2==2.7.9",
    "jinja2==3.1.4",
    "python-multipart>=0.0.22",
    "streamlit>=1.54.0",
]
